got the title and nav to break at the right dimension an got the title looking right. still need to fix the nav

--- a/style/style.css
+++ b/style/style.css
@@ -8,3 +8,25 @@ footer{
 .bg-teal{
     background-color: teal;
 }
+@media screen and (max-width: 628px){
+    body{
+        background-color: purple;
+        padding-left: 0%;
+    }
+    h3 {
+        width: 100vw;
+        margin-left: 0%;
+        margin-right: 0%;
+        padding-top: 3vh;
+        padding-bottom: 3vh;
+    }
+    .nav{
+        justify-content: center;
+    }
+    .container{
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+   
+
+}
